--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,14 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   carousel_slider: ^4.0.0
   rflutter_alert: ^2.0.4
-  searchfield: ^0.6.2
   category_picker: ^1.0.1
   get: ^4.6.1
   bottom_bar: ^1.3.0+1
   like_button: ^2.0.4
   audioplayers: ^0.20.1
+  firebase_core: ^1.17.0
+  firebase_auth: ^3.3.18
+  cloud_firestore: ^3.1.15
 
 dev_dependencies:
   flutter_test:
