--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^1.17.0
   firebase_auth: ^3.3.18
   cloud_firestore: ^3.1.15
+  firebase_storage: ^10.2.16
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/logo2.svg
+    - assets/images/logo3.svg
+
     - assets/icons/
     - assets/books/
     - assets/gifs/
