--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^3.3.18
   cloud_firestore: ^3.1.15
   firebase_storage: ^10.2.16
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/
     - assets/images/logo2.svg
     - assets/images/logo3.svg
 
