--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
+    - assets/gifs/
+
+
+
 
 
   #   - images/a_dot_ham.jpeg
