--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Cocoapods
+# export GEM_HOME=$HOME/.gem 
+# export PATH=$GEM_HOME/bin:$PATH
+# $ gem install cocoapods --user-install
+
+
