--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,21 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.3.1
-  font_awesome_flutter: ^9.2.0
-  flutter_launcher_icons: ^0.9.2
-  material_design_icons_flutter: ^5.0.6595
+  google_fonts: ^3.0.1
+  font_awesome_flutter: ^10.2.1
+  flutter_launcher_icons: ^0.11.0
+  material_design_icons_flutter: ^6.0.7096
   flutter_svg: ^1.0.3
   curved_navigation_bar: ^1.0.3
   carousel_slider: ^4.0.0
   rflutter_alert: ^2.0.4
   get: ^4.6.1
-  bottom_bar: ^1.3.0+1
-  audioplayers: ^0.20.1
-  firebase_core: ^1.17.0
-  firebase_auth: ^3.3.18
-  cloud_firestore: ^3.1.15
-  firebase_storage: ^10.2.16
+  bottom_bar: ^2.0.2
+  audioplayers: ^1.1.1
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  cloud_firestore: ^4.1.0
+  firebase_storage: ^11.0.6
   image_picker: ^0.8.5+3
 
 
@@ -61,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
