--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images
+    - assets/sounds
+
 
 
 
