--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images
-    - assets/sounds
+    - assets/images/
+    - assets/sounds/
 
 
 
