--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   firebase_auth: ^4.1.3
   cloud_firestore: ^4.1.0
   firebase_storage: ^11.0.6
-  image_picker: ^0.8.5+3
+  #image_picker: ^0.8.5+3
 
 
 
