--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_auth: ^4.1.3
   cloud_firestore: ^4.1.0
   firebase_storage: ^11.0.6
+  shared_preferences: ^2.0.15
   #image_picker: ^0.8.5+3
 
 
